# ListenInk

./: .gitignore  Cargo.toml  build-pdfium.sh  chat_context.py  chat_context.txt  color_palette.md  deploy.sh  package-lock.json  server-deploy.hook  start.sh  tree.sh  tree.txt
backend/: .gitignore  Cargo.toml  build.rs  init-dev-database.sh  package-lock.json  package.json  prompt.txt  tsconfig.json  tsconfig.tsbuildinfo
backend/prisma/: .gitignore  init-dev-database.ts  schema.prisma
backend/src/: auth.ts  categories.ts  docs.ts  error.ts  index.ts  lib.rs  order.ts  overrides.d.ts  types.ts  upload.ts
backend/src/dev/: alice in wonderland.hocr  bee movie intro.opus
backend/src/types/: docs.ts
frontend/: chat_context.py  chat_context.txt  hi.txt  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  site.webmanifest
frontend/src/: index.css  index.tsx  react-app-env.d.ts  setupProxy.js  types.ts
frontend/src/PageInitializer/: index.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useCategories.ts
frontend/src/pages/: MainPage.tsx  urlfor.tsx
frontend/src/routes/: Auth.tsx  Login.tsx  Root.tsx  Signup.tsx  test.module.css
frontend/src/store/: helper-types.ts  index.ts  thunks.ts
frontend/src/styles/: _drawer.scss
listenink/: chat_context.py  chat_context.txt  hi.txt  package-lock.json  package.json
listenink/src/: chat_context.py  index.js
listenink/src/contexts/: CategoriesContext.js  categoriesSlice.js  store.js
spec/: spec.md
src/: lib.rs  main.rs  openaiutils.rs  pdfutils.rs  s3utils.rs
(+73 files in other folders)
